<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomenu"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textoTituloMain"
        android:layout_width="185dp"
        android:layout_height="69dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/medievalsharp"
        android:text="@string/textoTituloMain"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonCrearMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="130dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/medievalsharp"
        android:onClick="crearPersonaje"
        android:text="@string/botonCrearMain"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonPersonajesMain"
        android:layout_width="144dp"
        android:layout_height="45dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="368dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/medievalsharp"
        android:text="@string/botonPersonajesMain"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent


    " />

    <Button
        android:id="@+id/botonExplorarMain"
        android:layout_width="97dp"
        android:layout_height="46dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="468dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/medievalsharp"
        android:onClick="wiki"
        android:text="@string/botonExplorarMain"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>