<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagen_fondo2"
    tools:context=".Activity_Finalizar">

    <TextView
        android:id="@+id/textViewRaza"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/medievalsharp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/textoClaseDatos"
        app:layout_constraintTop_toBottomOf="@+id/seekEdad" />

    <TextView
        android:id="@+id/textoProfesionDatos"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/medievalsharp"
        android:gravity="center"
        android:text="@string/textoProfesionDatos"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoClaseDatos" />

    <Button
        android:id="@+id/botonAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="544dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/medievalsharp"
        android:onClick="atras"
        android:text="@string/botonAtras"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="149dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="552dp"
        android:foregroundTint="@color/colorPrimary"
        android:indeterminateTint="@color/colorPrimary"
        android:max="100"
        android:progress="100"
        android:progressTint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/botonAtras"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="544dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/medievalsharp"
        android:onClick="crear"
        android:text="@string/botonCrear"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toEndOf="@+id/progressBar4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoTituloBiografia1"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/medievalsharp"
        android:gravity="center"
        android:text="@string/textoTituloBiografia"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoProfesionDatos" />

    <TextView
        android:id="@+id/textoClaseDatos"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/medievalsharp"
        android:gravity="center"
        android:text="@string/textoClaseDatos"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoEdadDatos" />

    <TextView
        android:id="@+id/textoEdadDatos"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/medievalsharp"
        android:gravity="center"
        android:text="@string/textoEdadDatos"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoGeneroDatos" />

    <TextView
        android:id="@+id/textoNombreDatos"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/medievalsharp"
        android:gravity="center"
        android:text="@string/textoNombreDatos"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoTituloDatos"
        android:layout_width="67dp"
        android:layout_height="28dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/medievalsharp"
        android:text="@string/textoTituloDatos"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textoGeneroDatos"
        android:layout_width="83dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/medievalsharp"
        android:gravity="center"
        android:text="@string/textoGeneroDatos"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoNombreDatos" />

    <TextView
        android:id="@+id/textoBiografia"
        android:layout_width="338dp"
        android:layout_height="183dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/medievalsharp"
        android:lineSpacingExtra="8sp"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="206dp"
        android:layout_height="35dp"
        android:layout_marginTop="42dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:fontFamily="@font/medievalsharp"
        android:foregroundTint="@color/colorPrimary"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorLink="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textoNombreDatos"
        app:layout_constraintTop_toBottomOf="@+id/textoTituloDatos" />

    <Spinner
        android:id="@+id/spinnerGenero"
        android:layout_width="151dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/textoGeneroDatos"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <SeekBar
        android:id="@+id/seekEdad"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:foregroundTint="@color/colorPrimary"
        android:indeterminateTint="@color/colorPrimary"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/colorPrimary"
        android:thumbTint="@color/colorPrimary"
        android:tickMarkTint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/textoEdadDatos"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGenero" />

    <TextView
        android:id="@+id/textViewProfesion"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/medievalsharp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/textoProfesionDatos"
        app:layout_constraintTop_toBottomOf="@+id/textViewRaza" />

    <TextView
        android:id="@+id/textEdad"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toEndOf="@+id/seekEdad"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>